# VeriSift

./: .gitignore  README.md  pyproject.toml
src/verisift/: __init__.py  api.py  cli.py  config.py  core.py  models.py
src/verisift/pipeline/: ingest.py  report.py  sanitizer.py  text_diff.py  text_difference.py  visual_diff.py
src/verisift/templates/: report_template.html  report_template_original.html
src/verisift/utils/: config_manager.py  health.py
tests/: sandbox_test.py
